fix overflow-x en menu hamburguesa

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -4,9 +4,6 @@
      padding: 0;
      box-sizing: border-box;
 }
-html, body {
-    overflow-x: hidden;
-}
 body {
     color: black;
     font-size: 16px;
@@ -369,8 +366,13 @@ footer .redes {
  /* BURGER MENU */
     /* .logo.zindex {z-index: -1;} */
     /* .triangulo-1.zindex {z-index: -1;} */
+    .burger-menu.hidebm {
+        z-index: -10;
+        right: 50%;
+        opacity: 0;
+    }
     .hideoverflow {
-        overflow: hidden;
+        overflow: hidden !important;
     }
     .burger-button {
         transition: var(--transicion);
